force-app/main/default/objects/Account_Affiliation__c/Account_Affiliation__c.object-meta.xml
<CustomObject>
    <label>Account Affiliation</label>
    <nameField>
        <displayFormat>AFF-{00000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>