force-app/main/default/objects/Account_Affiliation__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Idempotent upsert key for affiliations (e.g. AFF-DOC-921-CLINIC-16793).</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>