force-app/main/default/objects/Account_Affiliation__c/fields/Initiation_Source__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Source__c</fullName>
    <description>How this affiliation was first created or last visit-driven. Visit Attendee = added on a call report; Pharmacy Visit = follow-on pharmacy from HCP/HCO visit.</description>
    <label>Initiation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit Attendee</fullName>
            </value>
            <value>
                <fullName>Pharmacy Visit</fullName>
            </value>
            <value>
                <fullName>Master Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>