force-app/main/default/objects/Account_Affiliation__c/fields/Outside_Territory__c.field-meta.xml
<CustomField>
    <fullName>Outside_Territory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outside Territory</label>
    <type>Checkbox</type>
</CustomField>