force-app/main/default/objects/Account_Affiliation__c/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations (Primary)</relationshipLabel>
    <relationshipName>Affiliations_Primary</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>