force-app/main/default/objects/Account_Affiliation__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations (Related)</relationshipLabel>
    <relationshipName>Affiliations_Related</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>