force-app/main/default/objects/Account_Affiliation__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Visit-driven affiliation hit count. Increments when the same pair is reinforced via Visit Attendee or Pharmacy Visit. Strength is derived from Score.</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>