force-app/main/default/objects/Account_Affiliation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary_Account__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Affiliation_Type__c</columns>
    <columns>Role__c</columns>
    <columns>Strength__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>